# cutlass

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  ROADMAP.md  refs.txt
apps/cutlass-desktop/: Cargo.toml  README.md  build.rs
apps/cutlass-desktop/src/: account.rs  agent.rs  agent_jobs.rs  agent_senses.rs  agent_session.rs  agent_vision.rs  ai_media.rs  audio.rs  cache_registry.rs  cloud.rs  color_math.rs  drafts.rs  drag_preview.rs  eyedropper.rs  inspector.rs  library_helpers.rs  lottie_stickers.rs  lut_catalog.rs  main.rs  mask_gesture_session.rs  params.rs  placement.rs  preview_gesture.rs  preview_mask_gizmo.rs  preview_motion_path.rs  preview_select.rs  preview_worker.rs  projection.rs  sfx.rs  templates.rs  text_presets.rs  transform_gesture_session.rs  updates.rs  wire_color.rs  wire_engine.rs  wire_inspector.rs  wire_preview.rs  wire_settings.rs  wire_timeline.rs  wire_ui.rs
apps/cutlass-desktop/src/agent/: mod.rs  run.rs  sandbox.rs  seed_policy_tests.rs  tests.rs  token_usage.rs  tool_host.rs  transcript.rs
apps/cutlass-desktop/src/cache_registry/: registry.rs  tests.rs
apps/cutlass-desktop/src/drafts/: fs_ops.rs  meta.rs  tests.rs
apps/cutlass-desktop/src/eyedropper/: tests.rs
apps/cutlass-desktop/src/graph_editor/: channels.rs  edit.rs  mod.rs  tests.rs
apps/cutlass-desktop/src/preview_mask_gizmo/: tests.rs
apps/cutlass-desktop/src/preview_select/: tests.rs
apps/cutlass-desktop/src/preview_worker/: agent_bridge.rs  clip_audio.rs  clip_look.rs  dispatch.rs  effects.rs  handle.rs  invalidate.rs  look_preview.rs  markers_tracks.rs  mod.rs  overrides.rs  param_override.rs  project.rs  render.rs  tests.rs  timeline_ops.rs  types.rs  worker_loop.rs
apps/cutlass-desktop/src/projection/: helpers.rs  keyframes.rs  look.rs  tests.rs
apps/cutlass-desktop/tests/: agent_senses.rs
apps/cutlass-desktop/ui/: app.slint  fullscreen-preview.slint  launch-components.slint  launch.slint  state.slint  test-app.slint
apps/cutlass-desktop/ui/components/: button.slint  color-palette.slint  color-picker-parts.slint  color-picker.slint  color-swatch.slint  dropdown.slint  eyedropper-overlay.slint  grid-view.slint  index.slint  panel-header.slint  scroll-view.slint  slider.slint  text-input.slint  text.slint
apps/cutlass-desktop/ui/lib/: account-backend.slint  ai-backend.slint  color-util.slint  effects-backend.slint  graph-backend.slint  index.slint  inspector-backend.slint  preview-backend.slint  settings-backend.slint  update-backend.slint
apps/cutlass-desktop/ui/models/: project.slint
apps/cutlass-desktop/ui/shell/: canvas-dialog.slint  export-dialog.slint  settings-dialog.slint  title-bar.slint
apps/cutlass-desktop/ui/store/: agent-store.slint  app-store.slint  editor-store.slint  eyedropper-store.slint  index.slint  preview-store.slint  timeline-actions.slint
apps/cutlass-desktop/ui/theme/: dark-blue.slint  default.slint  ember.slint
crates/app/: Cargo.toml
crates/app/src/: convert.rs  demo.rs  main.rs
crates/app/ui/: app.slint
crates/app/ui/components/: editor_header.slint  placeholder_pane.slint  preview_panel.slint  split_grips.slint
crates/app/ui/models/: app_state.slint  index.slint  project.slint  ruler.slint
crates/cutlass-app/: Cargo.toml
crates/cutlass-app/src/: main.rs
crates/cutlass-engine/: Cargo.toml
crates/cutlass-engine/benches/: preview.rs
crates/cutlass-engine/src/: caption.rs  composite.rs  decoder_pool.rs  engine.rs  error.rs  export.rs  export_audio.rs  generator_raster.rs  import.rs  lib.rs  preview.rs
crates/cutlass-engine/src/action/: dispatch.rs  mod.rs
crates/cutlass-engine/tests/: captions.rs  clip_beats.rs  export.rs  extract_audio.rs  freeze_frame.rs  inverse_edits.rs  inverse_undo.rs  preview.rs  project_file.rs  template.rs  workflow.rs
crates/cutlass-engine/tests/common/: mod.rs
crates/cutlass-mcp/: Cargo.toml  README.md
crates/cutlass-mcp/src/: host.rs  lib.rs  main.rs  server.rs
crates/cutlass-mcp/src/host/: edits.rs  render.rs  tests.rs
crates/cutlass-mcp/src/tools/: edits.rs  mod.rs  project.rs  render.rs
crates/cutlass-mcp/tests/: mcp_client.rs
crates/cutlass-render/: Cargo.toml
crates/cutlass-render/benches/: text_anim.rs
crates/cutlass-render/examples/: composite_bench.rs  export_demo.rs
crates/cutlass-render/src/: animation.rs  export.rs  export_audio.rs  grade.rs  lib.rs  motion_blur.rs  render.rs  resolve.rs  scene.rs
crates/cutlass-render/src/render/: api.rs  effects.rs  mod.rs  raster_fit.rs  realize.rs  text_anim.rs
crates/cutlass-render/src/resolve/: generator.rs  param_override.rs  per_char_tests.rs  raster_scale_tests.rs  raster_supersample.rs  shape.rs  tests.rs
crates/cutlass-render/tests/: export_mp4.rs  export_sequence.rs  lut_render.rs  render_frame.rs  text_glyph_smoke.rs  text_keyframe_smoke.rs
crates/cutlass-text/: Cargo.toml
crates/cutlass-text/src/: animated.rs  effects.rs  lib.rs  style.rs
crates/cutlass-ui/: Cargo.toml
crates/cutlass-ui-gallery/: Cargo.toml  build.rs
crates/cutlass-ui-gallery/src/: main.rs
crates/cutlass-ui-gallery/ui/: app.slint  desktop-sections.slint  sections.slint
crates/cutlass-ui-gallery/ui/components/: card-dropdown.slint  card.slint  dropdown.slint  image.slint  index.slint
crates/cutlass-ui-gallery/ui/lib/: data-transfer.slint  image-actions.slint  string-filter.slint  timeline-demo.slint
crates/cutlass-ui/src/: agent.rs  inspector.rs  main.rs  params.rs  preview_gesture.rs  preview_select.rs  preview_worker.rs  projection.rs  selection.rs  snap.rs  strips.rs  thumbnails.rs
crates/cutlass-ui/ui/: app.slint  state.slint
crates/cutlass-ui/ui/components/: button.slint  index.slint
crates/cutlass-ui/ui/lib/: export-backend.slint  index.slint  inspector-backend.slint  preview-backend.slint  strip-backend.slint
crates/cutlass-ui/ui/models/: project.slint
crates/cutlass-ui/ui/shell/: export-dialog.slint  title-bar.slint
crates/cutlass-ui/ui/store/: editor-store.slint  (+3 more)
crates/renderer/: Cargo.toml
crates/renderer/shader/: quad.wgsl
crates/renderer/src/: lib.rs
(+371 files in other folders)
