[package]
name = "cutlass"
version = "0.1.0"
edition = "2024"

[dependencies]
bytemuck = { version = "1.16", features = ["derive"] }
env_logger = "0.11.10"
image = "0.25"
log = "0.4"
ffmpeg-next = "8.1.0"
pollster = "0.4.0"
wgpu = "29.0.3"
winit = "0.30.13"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-core-foundation = "0.3.2"
objc2-core-video = { version = "0.3.2", features = ["objc2-io-surface"] }
objc2-metal = { version = "0.3.2", features = ["objc2-io-surface"] }
objc2-io-surface = { version = "0.3.2", features = ["objc2-core-foundation"] }
