[package]
name = "cutlass-ui-rewrite"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]

slint = { version = "1.16", features = ["unstable-winit-030","unstable-wgpu-28", "renderer-femtovg-wgpu", "serde"] }
serde = { version = "1", features = ["derive"] }


[build-dependencies]
slint-build = "1.16"
