[package]
name = "cutlass-app"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Cutlass application"

[[bin]]
name = "cutlass-app"
path = "src/main.rs"

[dependencies]
cutlass-compositor = { path = "../cutlass-compositor" }
cutlass-decoder = { path = "../cutlass-decoder" }
cutlass-encoder = { path = "../cutlass-encoder" }
cutlass-engine = { path = "../cutlass-engine" }
cutlass-models = { path = "../cutlass-models" }
tracing.workspace = true
tracing-subscriber.workspace = true
