[package]
name = "cutlass-engine"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Cutlass editing engine"

[dependencies]
cutlass-cache = { path = "../cutlass-cache" }
cutlass-commands = { path = "../cutlass-commands" }
cutlass-compositor = { path = "../cutlass-compositor" }
cutlass-decoder = { path = "../cutlass-decoder" }
cutlass-models = { path = "../cutlass-models" }
pollster.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile = "3"
