[package]
name = "cutlass-mcp"
description = "Cutlass MCP server: validated project reads and edits for external agents"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow = "1"
rmcp = { version = "2", features = ["transport-io"] }
serde.workspace = true
serde_json.workspace = true
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
