[package]
name = "cutlass-render"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Cutlass render bridge: resolve a project timeline into composited frames and export them to video."

[dependencies]
cutlass-core = { path = "../cutlass-core" }
cutlass-models = { path = "../cutlass-models" }
cutlass-compositor = { path = "../cutlass-compositor" }
cutlass-decoder = { path = "../cutlass-decoder" }
cutlass-encoder = { path = "../cutlass-encoder" }
cutlass-shapes = { path = "../cutlass-shapes" }
cutlass-text = { path = "../cutlass-text" }
thiserror.workspace = true
tracing.workspace = true
png = "0.17"
# JPEG encode for agent vision frames (opaque RGB; alpha discarded).
image = { version = "0.25", default-features = false, features = ["jpeg"] }
nnnoiseless = "0.5"
tempfile = "3"
# The `lut-pack` baker bin writes the starter-pack `luts.json` catalog.
serde_json.workspace = true

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
cutlass-compositor = { path = "../cutlass-compositor" }
cutlass-core = { path = "../cutlass-core" }
# The zero-copy parity test inspects the adapter backend to skip on non-Metal
# (software) hosts where the Apple import path doesn't apply.
wgpu = { workspace = true }

[[bench]]
name = "text_anim"
harness = false
