[package]
name = "cutlass-text"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Text generator for Cutlass: shapes and rasterizes styled text runs into straight-alpha RgbaImage bitmaps the compositor can place as a layer."

[dependencies]
# Pinned to 0.17 for API stability; bump deliberately when adopting a newer
# cosmic-text release.
cosmic-text = "0.17.0"
cutlass-core = { path = "../cutlass-core" }

[dev-dependencies]
cutlass-compositor = { path = "../cutlass-compositor" }
