[package]
name = "cutlass-ui"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Cutlass desktop editor UI (Slint)"

[[bin]]
name = "cutlass-ui"
path = "src/main.rs"

[dependencies]
cutlass-commands = { path = "../cutlass-commands" }
cutlass-engine = { path = "../cutlass-engine" }
cutlass-models = { path = "../cutlass-models" }
rfd = "0.15"
slint = "1"
tracing.workspace = true
tracing-subscriber.workspace = true

[build-dependencies]
slint-build = "1"
