[package]
name = "renderer"
version.workspace = true
edition.workspace = true
description = "Cutlass GPU preview path (WGPU 28 / Slint-compatible)"

[dependencies]
cosmic-text = "0.19.0"
image = { version = "0.25", default-features = false, features = ["png"] }
slint = { version = "1.16", default-features = false, features = ["std", "compat-1-2", "unstable-wgpu-28"] }
tracing.workspace = true
# Slint’s transitive `wgpu` disables default features; enable WGSL so `ShaderSource::Wgsl` exists.
wgpu = { version = "28", default-features = false, features = ["wgsl"] }
